# tidymac

./: .gitignore  Cargo.toml  LICENSE  README.md  tidymac.1
.github/workflows/: ci.yml  release.yml
TidyMac/: Info.plist  Package.swift  TidyMac.entitlements
TidyMac/Libraries/: libtidymac.dylib  module.modulemap  tidymac.h
TidyMac/Sources/: ContentView.swift  Theme.swift  TidyMacApp.swift
TidyMac/Sources/Bridge/: TidyMacBridge.swift
TidyMac/Sources/ViewModels/: AppViewModel.swift
TidyMac/Sources/Views/: AppsView.swift  DashboardView.swift  DockerView.swift  HistoryView.swift  PrivacyView.swift  ScanView.swift  SettingsView.swift  StartupView.swift
TidyMacApp/Libraries/: libtidymac.dylib  tidymac.h
profiles/: creative.toml  deep_clean.toml  developer.toml  quick_sweep.toml
scripts/: build-dmg.sh  build-ffi.sh  install.sh  release.sh
src/: ffi.rs  lib.rs  main.rs
src/apps/: detector.rs  mod.rs  uninstaller.rs
src/cleaner/: engine.rs  manifest.rs  mod.rs  purger.rs  staging.rs
src/cli/: args.rs  output.rs
src/common/: config.rs  errors.rs  format.rs  mod.rs  observability.rs  permissions.rs  safety.rs  scan_cache.rs
src/duplicates/: grouper.rs  hasher.rs  mod.rs  perceptual.rs  resolver.rs
src/privacy/: browsers.rs  mod.rs  trackers.rs
src/profiles/: loader.rs
src/scanner/: cache.rs  dev_detector.rs  docker.rs  mod.rs  targets.rs  walker.rs
src/startup/: manager.rs  mod.rs
src/viz/: mod.rs  storage.rs
tests/: apps_test.rs  cli_test.rs  hasher_test.rs  privacy_test.rs  scanner_test.rs  staging_test.rs  startup_test.rs  viz_test.rs
(+3 files in other folders)
